--- a/css/main.css
+++ b/css/main.css
@@ -1,263 +1,233 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-  color: #222;
-  font-size: 1em;
-  line-height: 1.4;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+/* Variables */
+/* General */
+body {
+  background: linear-gradient(#170c26 50%, #FFFFFF);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
+div, section, footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
+div {
+  padding: 20px 0;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden,
-[hidden] {
-  display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
+img {
+  width: 100%;
   overflow: hidden;
+}
+
+.visible {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+#choose-level,
+#level-details,
+#result {
+  width: 90%;
+  background: #FFFFFF;
+  border: #cc99ff 5px solid;
+}
+
+/* Text Styles */
+h1, h2, h3, h4, h5, p, button, a {
+  font-family: "Raleway", Arial, sans-serif;
+  margin: 20px 0;
+}
+
+h1 {
+  color: #FFFFFF;
+  margin: 10px 0;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 32px;
+}
+
+h2, h5 {
+  color: #9b53c0;
+}
+
+h3, a {
+  color: #cc99ff;
+}
+
+h3 {
+  margin: 30px 0;
+}
+
+h5 {
+  margin: 10px 0;
+}
+
+p {
+  color: #000000;
+}
+
+button {
+  background: linear-gradient(30deg, #7f4cbe 0%, #d462c5 100%);
+  color: #FFFFFF;
+  border: none;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-decoration: none;
+  border-radius: 3px;
+}
+button a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+/* About Section */
+.about {
+  width: 100%;
   padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  /* 1 */
 }
 
-/*
- * Extends the .sr-only class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
+.title {
+  width: 100%;
+}
 
-.sr-only.focusable:active,
-.sr-only.focusable:focus {
-  clip: auto;
-  height: auto;
+/* Choose Level */
+#choose-level h3 {
+  margin-bottom: 0;
+  color: #9b53c0;
+}
+#choose-level p {
+  text-decoration: underline;
+  color: #9b53c0;
+}
+
+#level-details p {
+  color: #000000;
+  text-decoration: none;
+  margin-top: 0px;
+  width: 90%;
+}
+#level-details button {
+  margin: 30px 0 10px 0;
+}
+
+/* Result */
+.trick, .cta, .reset {
+  padding: 0;
+}
+
+.trick p {
+  margin-bottom: 0;
+}
+
+.cta button,
+.reset button {
   margin: 0;
-  overflow: visible;
-  position: static;
-  white-space: inherit;
-  width: auto;
 }
 
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-  visibility: hidden;
+.cta p:nth-of-type(2) {
+  margin: 10px 0;
 }
 
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix::before,
-.clearfix::after {
-  content: " ";
-  display: table;
+.reset {
+  margin: 40px 0 0;
 }
 
-.clearfix::after {
-  clear: both;
+/* Footer */
+footer {
+  margin-top: 40px;
+}
+footer p {
+  color: #FFFFFF;
+}
+footer .logo {
+  padding-bottom: 0;
+}
+footer .logo a {
+  margin: 0;
+}
+footer .logo img {
+  width: 70%;
+}
+footer .attribution {
+  padding-top: 0;
+}
+footer .attribution p {
+  color: #000000;
+}
+footer .attribution p a {
+  color: #9b53c0;
 }
 
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
+@media screen and (min-width: 768px) {
+  .main-content {
+    width: 100%;
   }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
-
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
-
-  pre {
-    white-space: pre-wrap !important;
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
   img {
-    page-break-inside: avoid;
+    width: 70%;
   }
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
+  button {
+    min-width: 120px;
   }
 
-  h2,
-  h3 {
-    page-break-after: avoid;
+  .level-buttons,
+.cta-buttons {
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-evenly;
+    padding: 0;
+  }
+
+  .cta p {
+    width: 80%;
+  }
+
+  .cta-buttons button {
+    min-width: 220px;
+  }
+
+  footer {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+  }
+  footer .logo {
+    text-align: left;
+    padding-bottom: 20px;
+    padding-top: 40px;
+    margin-left: 30px;
+  }
+  footer .logo img {
+    width: 40%;
+  }
+  footer .attribution {
+    padding: 0;
+    margin-right: 30px;
+  }
+  footer .attribution p, footer .attribution a {
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .result {
+    width: 70%;
   }
 }
 
+/*# sourceMappingURL=main.css.map */
