Minor adjustment to desktop styles

--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,9 @@ footer .attribution p a {
   }
 }
 @media screen and (min-width: 1024px) {
-  .result {
+  #choose-level,
+#level-details,
+#result {
     width: 70%;
   }
 }
